@@ -1,8 +1,9 @@
 package org.correomqtt.business.keyring;
 
-import org.correomqtt.plugin.manager.PluginManager;
 import org.correomqtt.plugin.spi.KeyringHook;
+import org.correomqtt.plugin.manager.PluginManager;
 
+import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -13,11 +14,8 @@ public class KeyringFactory {
         // empty constructor
     }
 
-    public static Keyring create() {
-        return getSupportedKeyrings()
-                .stream()
-                .findFirst()
-                .orElseThrow(() -> new KeyringException("No supported keyring backend found."));
+    public static List<Keyring> create() {
+        return new ArrayList<>(getSupportedKeyrings());
     }
 
     public static Keyring createKeyringByIdentifier(String identifier) {
@@ -38,7 +36,7 @@ public class KeyringFactory {
     public static List<Keyring> getSupportedKeyrings() {
         return getAllKeyrings().stream()
                 .filter(Keyring::isSupported)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
