@@ -1,15 +1,13 @@
 package org.correomqtt.gui.controller;
 
-import org.correomqtt.business.dispatcher.ConfigDispatcher;
-import org.correomqtt.business.dispatcher.ConfigObserver;
-import org.correomqtt.business.utils.ConnectionHolder;
-import org.correomqtt.gui.cell.ConnectionCell;
-import org.correomqtt.gui.model.ConnectionPropertiesDTO;
-import org.correomqtt.gui.transformer.ConnectionTransformer;
 import javafx.collections.FXCollections;
 import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
-import javafx.scene.control.*;
+import javafx.scene.control.Button;
+import javafx.scene.control.ComboBox;
+import javafx.scene.control.Label;
+import javafx.scene.control.ListCell;
+import javafx.scene.control.ListView;
 import javafx.scene.input.KeyCode;
 import javafx.scene.input.KeyEvent;
 import javafx.scene.input.MouseButton;
@@ -17,6 +15,12 @@ import javafx.scene.input.MouseEvent;
 import javafx.scene.layout.AnchorPane;
 import javafx.scene.layout.HBox;
 import javafx.scene.layout.VBox;
+import org.correomqtt.business.dispatcher.ConfigDispatcher;
+import org.correomqtt.business.dispatcher.ConfigObserver;
+import org.correomqtt.business.utils.ConnectionHolder;
+import org.correomqtt.gui.cell.ConnectionCell;
+import org.correomqtt.gui.model.ConnectionPropertiesDTO;
+import org.correomqtt.gui.transformer.ConnectionTransformer;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -27,7 +31,7 @@ import java.util.Map;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 
-public class ConnectionOnbordingViewController extends BaseController implements ConfigObserver, ConnectionOnboardingDelegate {
+public class ConnectionOnbordingViewController extends BaseController implements ConfigObserver {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(ConnectionOnbordingViewController.class);
     @FXML
@@ -52,18 +56,23 @@ public class ConnectionOnbordingViewController extends BaseController implements
     public HBox noConnectionsButtonBar;
     private ConnectionOnboardingDelegate connectionsOnboardingDelegate;
     private ConnectionSettingsViewDelegate connectionsSettingsViewDelegate;
+    private ConnectionExportViewDelegate connectionExportViewDelegate;
+    private ConnectionImportViewDelegate connectionImportViewDelegate;
 
-    public ConnectionOnbordingViewController(ConnectionOnboardingDelegate connectionsOnboardingDelegate, ConnectionSettingsViewDelegate connectionSettingsViewDelegate) {
+    public ConnectionOnbordingViewController(ConnectionOnboardingDelegate connectionsOnboardingDelegate, ConnectionSettingsViewDelegate connectionSettingsViewDelegate, ConnectionExportViewDelegate connectionExportViewDelegate, ConnectionImportViewDelegate connectionImportViewDelegate) {
         super();
         this.connectionsOnboardingDelegate = connectionsOnboardingDelegate;
         this.connectionsSettingsViewDelegate = connectionSettingsViewDelegate;
+        this.connectionExportViewDelegate = connectionExportViewDelegate;
         ConfigDispatcher.getInstance().addObserver(this);
     }
 
     public static LoaderResult<ConnectionOnbordingViewController> load(ConnectionOnboardingDelegate connectionsOnboardingDelegate,
-                                                                       ConnectionSettingsViewDelegate connectionSettingsViewDelegate) {
+                                                                       ConnectionSettingsViewDelegate connectionSettingsViewDelegate,
+                                                                       ConnectionExportViewDelegate connectionExportViewDelegate,
+                                                                       ConnectionImportViewDelegate connectionImportViewDelegate) {
         return load(ConnectionOnbordingViewController.class, "connectionOnboardingView.fxml",
-                () -> new ConnectionOnbordingViewController(connectionsOnboardingDelegate, connectionSettingsViewDelegate));
+                () -> new ConnectionOnbordingViewController(connectionsOnboardingDelegate, connectionSettingsViewDelegate, connectionExportViewDelegate, connectionImportViewDelegate));
     }
 
     public void setDelegate(ConnectionOnboardingDelegate delegate) {
@@ -169,7 +178,7 @@ public class ConnectionOnbordingViewController extends BaseController implements
         connectionListView.getItems().clear();
         connectionListView.getItems().addAll(resultList.stream()
                 .sorted(Comparator.comparing(o -> sorted.get(o.getId())))
-                .collect(Collectors.toList()));
+                .toList());
 
         boolean isEmpty = connectionListView.getItems().isEmpty();
         connectionListView.setVisible(!isEmpty);
@@ -210,7 +219,7 @@ public class ConnectionOnbordingViewController extends BaseController implements
     }
 
     public void openSettings(boolean autoNew) {
-        ConnectionSettingsViewController.showAsDialog(connectionsSettingsViewDelegate);
+        ConnectionSettingsViewController.showAsDialog(connectionsSettingsViewDelegate, connectionExportViewDelegate, connectionImportViewDelegate);
         if (autoNew) {
             //result.getController().onAddClicked(); TODO
             LOGGER.debug("Open settings with new default connection");
@@ -279,9 +288,9 @@ public class ConnectionOnbordingViewController extends BaseController implements
     public void onConfigPrepareFailed() {
         // nothing to do
     }
-
-    @Override
-    public void onConnect(ConnectionPropertiesDTO config) {
-        // nothing to do
+    public void cleanUp() {
+        ConnectionPropertiesDTO config = connectionListView.getSelectionModel().getSelectedItem();
+        connectionsOnboardingDelegate.cleanUpProvider(config);
+        ConfigDispatcher.getInstance().removeObserver(this);
     }
 }
