@@ -1,8 +1,10 @@
 package org.correomqtt.gui.transformer;
 
+import javafx.collections.FXCollections;
+import javafx.collections.ObservableList;
 import org.correomqtt.business.model.ConnectionConfigDTO;
 import org.correomqtt.gui.model.ConnectionPropertiesDTO;
-import javafx.collections.ObservableList;
+import org.correomqtt.plugin.model.LwtConnectionExtensionDTO;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -16,7 +18,7 @@ public class ConnectionTransformer {
     public static List<ConnectionPropertiesDTO> dtoListToPropList(List<ConnectionConfigDTO> connectionDTOList) {
         return connectionDTOList.stream()
                 .map(ConnectionTransformer::dtoToProps)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static ConnectionPropertiesDTO dtoToProps(ConnectionConfigDTO dto) {
@@ -55,7 +57,7 @@ public class ConnectionTransformer {
     public static List<ConnectionConfigDTO> propsListToDtoList(ObservableList<ConnectionPropertiesDTO> connectionPropList) {
         return connectionPropList.stream()
                 .map(ConnectionTransformer::propsToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static ConnectionConfigDTO propsToDto(ConnectionPropertiesDTO props) {
@@ -87,5 +89,19 @@ public class ConnectionTransformer {
                 .lwtPayload(props.getLwtPayload())
                 .connectionUISettings(props.getConnectionUISettings())
                 .build();
+    }
+
+
+    public static ConnectionPropertiesDTO mergeProps(LwtConnectionExtensionDTO from,
+                                                     ConnectionPropertiesDTO to) {
+        to.getIdProperty().setValue(from.getId());
+        to.getNameProperty().setValue(from.getName());
+        to.getLwtProperty().setValue(from.getLwt());
+        to.getLwtTopicProperty().setValue(from.getLwtTopic());
+        to.getLwtQoSProperty().setValue(from.getLwtQoS());
+        to.getLwtRetainedProperty().setValue(from.isLwtRetained());
+        to.getLwtPayloadProperty().setValue(from.getLwtPayload());
+        to.getExtraProperties().setValue(FXCollections.observableMap(from.getCustomFields()));
+        return to;
     }
 }
